fixes and readability changes + slider work

--- a/Styles/_slider.scss
+++ b/Styles/_slider.scss
@@ -24,7 +24,7 @@
         height: 60%;
     }
 
-    .movieBackdrops {
+    .backdropimage {
         width: 1280px;
         position: relative;
         color: white;
